Landing page styles and so on.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
   <meta charset="utf-8">
   <title>Juan Astorga | Personal Page</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/site.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">  
 </head>
 <body>
-    plz hire
+    <div class="main-container">
+        <div class="landing-flex-container">
+            <div class="name-and-info">
+                <div class="name-big">
+                    <div class="name-half">JUAN</div>
+                    <div class="name-half">ASTORGA</div>
+                </div>
+                <div class="info-big">
+                    <span>MADRID, Spain</span>
+                    <span>jastoreu17@outlook.com</span>
+                    <span>github.com/humaneistaken</span>
+                </div>
+            </div>
+            <div class="underline-container">web developer</div>
+        </div>
+    </div>
 </body>
 </html>
 
