Some more work done on the information page.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,123 @@
                     <span>github.com/humaneistaken</span>
                 </div>
             </div>
-            <div class="underline-container">web developer</div>
+            <div class="job-title">web developer</div>
         </div>
+        <div class="info-wrapper">
+            <header class="page-header">
+                <div class="header-name">JUAN ASTORGA</div>
+                <div class="contact-container">
+                    <div class="icon-wrapper">
+                        <img class="contact-icon" src="img/grid-world.png"/>
+                    </div>
+                    <div class="icon-wrapper">
+                        <img class="contact-icon" src="img/mail-black-envelope-symbol.png"/>
+                    </div>
+                    <div class="icon-wrapper">
+                        <img class="contact-icon" src="img/github-logo.png"/>
+                    </div>
+                </div>
+            </header>
+            <div class="detailed-info-container">
+                <section class="profile-section">
+                    <header class="section-header">
+                        <span class="header-col-1"></span>
+                        <span class="header-col-2">PROFILE</span>
+                        <span class="header-col-3"></span>
+                    </header>
+                    <div>
+                        <p>
+                            Aspiring web developer already familiar with a variety of technologies
+                            utilized in front and back-end web development. Constantly looking for
+                            opportunities to deepen my understanding of the development process
+                            and the tools employed, whilst contributing to a group goal.
+                        </p>
+                        <p>
+                            Experienced living in a variety of different cultures, allowing me to
+                            adapt to any work environment.
+                            Fluent in both spoken and written English and Spanish,
+                            and always willing to learn a new language.
+                        </p>
+                    </div>
+                </section>
+                <section class="skills-section">
+                    <header class="section-header">
+                        <span class="header-col-1"></span>
+                        <span class="header-col-2">SKILLS</span>
+                        <span class="header-col-3"></span>
+                    </header>
+                    <div class="skills-wrapper">
+                        <div class="skill-category">
+                            <span class="skill-category-header">LANGUAGES</span>
+                            <ul class="skill-list">
+                                <li>C#</li>
+                                <li>PYTHON</li>
+                                <li>JAVA</li>
+                                <li>PHP</li>
+                                <li>SQL</li>
+                            </ul>
+                        </div>
+                        <div class="skill-category">
+                            <span class="skill-category-header">FRONT-END</span>
+                            <ul class="skill-list">
+                                <li>HTML</li>
+                                <li>CSS (SASS)</li>
+                                <li>JAVASCRIPT (TYPESCRIPT)</li>
+                                <li>ANGULAR (V5)</li>
+                            </ul>
+                        </div>
+                        <div class="skill-category">
+                            <span class="skill-category-header">BACK-END</span>
+                            <ul class="skill-list">
+                                <li>NODE.JS (EXPRESS)</li>
+                                <li>ASP.NET (4.5/CORE)</li>
+                                <li>SQL SERVER</li>
+                                <li>MONGODB</li>
+                            </ul>
+                        </div>
+                        <div class="skill-category">
+                            <span class="skill-category-header">OTHER</span>
+                            <ul class="skill-list">
+                                <li>GIT</li>
+                                <li>PHOTOSHOP</li>
+                                <li>AGILE (SCRUM)</li>
+                                <li>UNIT TESTING (JASMINE)</li>
+                            </ul>
+                        </div>
+                        
+                    </div>
+                </section>
+                <section class="projects-section">
+                    <header class="section-header">
+                        <span class="header-col-1"></span>
+                        <span class="header-col-2">PROJECTS</span>
+                        <span class="header-col-3"></span>
+                    </header>
+                    <div class="projects-container">
+                        <div class="project prj-1">
+                            <div class="project-title">DoorKnock</div>
+                            <p> DoorKnock is an app whose purpose is to knock on doors
+                                as best as it can, unfortunately it was scrapped since
+                                it knocked on too many doors leading to many complaints.
+                            </p>
+                            <div class="project-gallery">
+
+                            </div>
+                        </div>
+                        <div class="project prj-2">
+                            <div class="project-title">PalicoDB</div>
+                            <p> DoorKnock is an app whose purpose is to knock on doors
+                                as best as it can, unfortunately it was scrapped since
+                                it knocked on too many doors leading to many complaints.
+                            </p>
+                            <div class="project-gallery">
+
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>        
+        </div>        
     </div>
 </body>
 </html>
