Changes to site header.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             <div class="job-title">web developer</div>
         </div>
         <div class="info-wrapper">
-            <header class="page-header">
+            <div class="header-fixed-border">
+                <img class="header-icon" src="img/header-logo.png">
+            </div>
+            <header class="header-contents">
                 <div class="header-name">JUAN ASTORGA</div>
                 <div class="contact-container">
                     <div class="icon-wrapper">
