Responsive landing page included.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="main-container">
         <div class="landing-flex-container">
+            <img class="landing-img" src="img/hu-img.png" />
             <div class="name-and-info">
                 <div class="name-big">
                     <div class="name-half">JUAN</div>
