More responsive fixes for the landing page, particularly when viewed on mobile.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 </div>
                 <div class="info-big">
                     <span>MADRID, Spain</span>
-                    <span>jastoreu17@outlook.com</span>
-                    <span>github.com/humaneistaken</span>
+                    <a href="mailto:jastoreu17@outlook.com">jastoreu17@outlook.com</a>
+                    <a href="https://www.github.com/humaneistaken">github.com/humaneistaken</a>
                 </div>
             </div>
             <div class="job-title">web developer</div>
