Possible fix to transition not occuring on mobile/some desktop browsers.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Juan Astorga | Personal Page</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/site.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
 </head>
@@ -23,7 +24,7 @@
                 </div>
             </div>
             <div id="jtitle-wrapper">
-                <span id="jtitle">web developer</span>    
+                <div id="jtitle">web developer</div>    
             </div>
         </div>
         <div id="info-page-container" class="hidden">
