Some fixes to landing page animation on mobile.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main-container">
         <div id="landing-container">
-            <img class="landing-img" src="img/hu-img.png" />
+            <img id="landing-img" src="img/hu-img.png" />
             <div class="name-and-info">
                 <div id="name-big">
                     <div class="name-half">JUAN</div>
