Added scroll memo, clickable buttons and more.

--- a/index.html
+++ b/index.html
@@ -33,21 +33,25 @@
             <div id="jtitle-wrapper">
                 <div id="jtitle">web developer</div>    
             </div>
+            <div id="scroll-memo">SCROLL</div>
         </div>
         <div id="info-page-container" class="hidden">
-            <div class="header-fixed-border">
+            <div id="dropdown-msg">
+
+            </div>
+            <div class="header-border-fixed">
                 <img class="header-icon" src="img/header-logo.png">
             </div>
             <header class="header-contents">
                 <div class="header-name">JUAN ASTORGA</div>
                 <div class="contact-container">
-                    <div class="icon-wrapper">
+                    <div onclick="contactClick('world')" class="icon-wrapper">
                         <img class="contact-icon" src="img/grid-world.png"/>
                     </div>
-                    <div class="icon-wrapper">
+                    <div onclick="contactClick('mail')" class="icon-wrapper">
                         <img class="contact-icon" src="img/mail-black-envelope-symbol.png"/>
                     </div>
-                    <div class="icon-wrapper">
+                    <div onclick="contactClick('git')" class="icon-wrapper">
                         <img class="contact-icon" src="img/github-logo.png"/>
                     </div>
                 </div>
@@ -64,10 +68,10 @@
                             Aspiring web developer already familiar with a variety of technologies
                             utilized in front and back-end web development. Constantly looking for
                             opportunities to deepen my understanding of the development process
-                            and the tools employed, whilst contributing to a group goal.
+                            and the tools employed, whilst contributing to a common goal.
                         </p>
                         <p>
-                            Experienced living in a variety of different cultures, allowing me to
+                            Also xperienced living in a variety of different cultures, allowing me to
                             adapt to any work environment.
                             Fluent in both spoken and written English and Spanish,
                             and always willing to learn a new language.
@@ -144,13 +148,12 @@
                             </p>
                             <p>
                                 I had recently obtained a pair of closed-back headphones, limiting my ability 
-                                to hear stuff around me. I started working on this idea, with communication
+                                to hear my surroundings. Due to this I started working on an application with communication
                                 within a household in mind. I completed a rough prototype of how the desktop
-                                application would work, however due to lack of hardware (phones) I scrapped
-                                the project.
+                                application would work, however due to lack of hardware, the project was indefinitely postponed.
                             </p>
                             <p>
-                                However this gave me some wonderful insights into the development process of a
+                                Nevertheless, this gave me some wonderful insights into the development process of a
                                 Windows 10 app and the Universal Windows Platform. The app was mainly coded in C#
                                 with ASP.NET CORE as the main framework.
                             </p>
@@ -178,7 +181,7 @@
                                 PalicoDB was created as a sandbox project with the intent of learning more about
                                 the Angular framework. The idea was to create a database website for the popular
                                 game Monster Hunter World. It would keep track of information relating to items
-                                ingame, as well as adding some extra functionality if time and life permitted so.
+                                ingame, as well as adding some extra functionality if time and circumstance permitted it so.
                             </p>
                             <p>
                                 The site itself has an Angular front-end, serviced by a Node.js (Express) back-end.
@@ -193,17 +196,17 @@
                     </div>
                 </section>
                 <section class="footer-section">
-                    <div>
+                    <div class="footer-msg">
                         Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy (GitHub Icon)</a>,
                         <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon (E-Mail Icon)</a>,
                         <a href="https://www.flaticon.com/authors/yannick" title="Dave Gandy">Yannick (Globe Icon)</a>
                         from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by 
                         <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
                     </div>
-                    <div>
-                        Lightbox provided by <a href="https://fancyapps.com/fancybox/3/" title="Fancybox">Fancybox</a>
+                    <div class="footer-msg">
+                        Lightbox provided by <a href="https://fancyapps.com/fancybox/3/" title="Fancybox">Fancybox</a>.
                     </div>
-                    <div>
+                    <div class="footer-msg">
                         For a copy of my resume, send an email to <a href="mailto:jastoreu17@outlook.com">jastoreu17@outlook.com</a>
                     </div>
                 </section>
