--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Juan Astorga | Personal Page</title>
 
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link href="css/site.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
 
