--- a/index.html
+++ b/index.html
@@ -66,16 +66,12 @@
                     </header>
                     <div>
                         <p>
-                            Aspiring web developer already familiar with a variety of technologies
-                            utilized in front and back-end web development. Constantly looking for
-                            opportunities to deepen my understanding of the development process
-                            and the tools employed, whilst contributing to a common goal.
+                            Aspiring developer already familiar with a variety of technologies utilized in front and back-end web development.
+                            Constantly looking for opportunities to broaden my understanding of the development process and the tools employed, whilst contributing to a group goal.    
                         </p>
                         <p>
-                            Also xperienced living in a variety of different cultures, allowing me to
-                            adapt to any work environment.
-                            Fluent in both spoken and written English and Spanish,
-                            and always willing to learn a new language.
+                            Also experienced living in a variety of different cultures, allowing me to adapt to any work environment.
+                            Fluent in both English and Spanish, and always willing to learn a new language.
                         </p>
                     </div>
                 </section>
